# passworth

./: Cargo.toml  build.rs  readme.md
source/: Cargo.toml  browser.nix  browserModule.nix  build.rs  build_ff_ext_debug.sh  build_ff_ext_release.sh  complete_pw.zsh  default.nix  makeBrowserZip.nix  package-ext.nix  package.nix  shell.nix
source/browser/: browser_manifest.json  native_manifest.json  native_manifest_chrome.json  native_manifest_firefox.json
source/browser/ext_static/: content.d.ts  content.js  popup1.js
source/native/: Cargo.toml  build.rs
source/native-no-systemd/: Cargo.toml
source/native/src/: crypto.rs  error.rs  lib.rs  proto.rs
source/native/src/config/: mod.rs  v1.rs
source/native/src/generate/: mod.rs
source/nixbuild/: rust.nix
source/nixbuild/native/: complete_pw.bash  default.nix  package.nix
source/nixbuild/native-no-systemd/: Cargo.toml
source/rustbuild/: rust.nix
source/rustbuild/native/: Cargo.toml  default.nix
source/rustbuild/native-no-systemd/: default.nix
source/rustbuild/wasm/: default.nix
source/shared/: Cargo.toml
source/shared-native/: Cargo.toml
source/shared-native/src/: proto.rs
source/shared/src/: datapath.rs  ipc.rs  lib.rs  utils.rs
source/skeleton/: browser_manifest.json  browser_manifest_chrome.json  browser_manifest_firefox.json
source/skeleton/browser_static/: content.js  popup.html
source/skeleton/ext_static/: content.js  popup.html  popup_style.css  tsconfig.json
source/src/: crypto.rs  datapath.rs  ioutil.rs  lib.rs  proto.rs
source/src/config/: mod.rs  v1.rs
source/wasm/: Cargo.toml
source/wasm/src/: lib.rs
src/: config.rs  crypto.rs  error.rs  ioutil.rs  lib.rs  proto.rs
src/config/: mod.rs  v1.rs
src/generate/: mod.rs
