[package]
name = "passworth"
version = "0.1.0"
edition = "2021"

[dependencies]
pcsc = "2.8.2"
aargvark = { version = "0.2.0", features = ["serde_json"] }
loga = "0.4.0"
card-backend = "0.2.0"
card-backend-pcsc = "0.5.0"
openpgp-card-sequoia = "0.2.1"
sequoia-openpgp = "1.19.0"
serde_json = "1.0.115"
serde = { version = "1.0.197", features = ["derive"] }
chrono = "0.4.37"
rusqlite = { version = "0.31.0", features = ["sqlcipher"] }
nix = { version = "0.28.0", features = ["process", "fs"] }
good-ormning-runtime = { version = "0.1.16", features = ["sqlite", "chrono"] }
libc = "0.2.153"
tokio = { version = "1.37.0", features = [
    "macros",
    "rt",
    "fs",
    "net",
    "io-util",
] }
gtk4 = "0.8.1"

[build-dependencies]
good-ormning = { version = "0.1.16", features = ["sqlite", "chrono"] }
inarybay = "0.1.0"
