[package]
name = "passworth"
version = "0.1.0"
edition = "2021"

[dependencies]
pcsc = "2"
aargvark = { version = "0.2", features = ["serde_json"], path = "../aargvark" }
loga = "0.4"
card-backend = "0.2"
card-backend-pcsc = "0.5"
openpgp-card-sequoia = "0.2"
sequoia-openpgp = "1"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
chrono = "0.4"
rusqlite = { version = "0.31", features = ["sqlcipher"] }
nix = { version = "0.28", features = ["process", "fs"] }
good-ormning-runtime = { version = "0.1", features = ["sqlite", "chrono"] }
libc = "0.2"
tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "fs",
    "net",
    "io-util",
    "process",
] }
gtk4 = { version = "0.8", features = ["v4_12"] }
tokio-stream = { version = "0.1", features = ["net"] }
taskmanager = "0.5"
sha2 = "0.10"
chacha20poly1305 = "0.10"
generic-array = { version = "0.14", features = ["serde"] }
defer = "0.2"
rand = "0.8"
zbase32 = "0.1"
include-lines = "1.1.2"
users = "0.11.0"

[build-dependencies]
good-ormning = { version = "0.1", features = ["sqlite", "chrono"] }
