[package]
name = "passworth"
version = "0.1.0"
edition = "2021"

[dependencies]
pcsc = "2"
aargvark = { version = "0.7", features = ["serde_json"] }
loga = "0.5"
card-backend = "0.2"
card-backend-pcsc = "0.5"
openpgp-card-sequoia = "0.2"
sequoia-openpgp = "1"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
chrono = "0.4"
rusqlite = { version = "0.33", features = ["bundled-sqlcipher"] }
nix = { version = "0.29", features = ["process", "fs"] }
good-ormning-runtime = { version = "0.3", features = ["sqlite", "chrono"] }
libc = "0.2"
tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "fs",
    "net",
    "io-util",
    "process",
] }
gtk4 = { version = "0.9", features = ["v4_12"] }
tokio-stream = { version = "0.1", features = ["net"] }
taskmanager = "0.6"
sha2 = "0.10"
chacha20poly1305 = "0.10"
generic-array = { version = "0.14", features = ["serde"] }
defer = "0.2"
rand = "0.9"
zbase32 = "0.1"
include-lines = "1"
users = "0.11"
libsqlite3-sys = { version = "0.31", features = ["bundled-sqlcipher"] }
flowcontrol = "0.2"
glove = "0.1"
schemars = "0.8"
async-stream = "0.3"
ssh-key = { version = "0.6", features = ["crypto"] }
totp-rs = { version = "5.6.0", features = ["otpauth"] }

[build-dependencies]
good-ormning = { version = "0.3", features = ["sqlite", "chrono"] }
