[package]
name = "passworth"
version = "0.1.1"
edition = "2021"
description = "Protocol shared datatypes for Passworth"
readme = "../../readme.md"
repository = "https://github.com/andrewbaxter/passworth"
license = "ISC"

[dependencies]
glove = { version = "0.4" }
zbase32 = "0.1"
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
