[package]
name = "passworth-wasm"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
passworth = { path = "../shared" }
chrono = { version = "0.4", features = ["serde"] }
console_error_panic_hook = "0.1"
gloo = { version = "0.9", features = ["futures", "utils"] }
js-sys = "0.3"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
wasm-bindgen = "=0.2.100"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "HtmlInputElement",
    "HtmlFormElement",
    "Location",
    "Url",
    "Navigator",
    "MouseEvent",
    "Document",
    "XPathResult",
] }
futures = "0.3"
tokio = { version = "1", features = ["macros", "sync"] }
rooting = { version = "0.1", features = ["futures"] }
flowcontrol = "0.2"
